# BaseKit-code-samples

./: README.md  third-party-programs.txt
Advisor/matrix_multiply_advisor/: CMakeLists.txt  README.md  matrix_multiply.vcxproj  matrix_multiply.vcxproj.filters  sample.json
Advisor/matrix_multiply_advisor/linux/: Makefile
Advisor/matrix_multiply_advisor/src/: matrix.cpp  multiply.cpp  multiply.h  util.cpp
DPC++Compiler/: README.md
DPC++Compiler/FPGAExampleDesigns/crr/src/: CMakeLists.txt  CRR_common.h  main.cpp
DPC++Compiler/FPGAExampleDesigns/crr/src/data/: ordered_inputs.csv
DPC++Compiler/FPGATutorials/Compilation/device_link/src/: CMakeLists.txt  kernel.cpp  kernel.h
DPC++Compiler/FPGATutorials/FPGAExtensions/LoopAttributes/loop_unroll/src/: CMakeLists.txt  build.ninja  loop_unroll.cpp
DPC++Compiler/FPGATutorials/FPGAExtensions/Other/args_aliasing/src/: CMakeLists.txt  build.ninja  no_accessor_aliasing.cpp
DPC++Compiler/FPGATutorials/FPGAExtensions/Other/fpga_register/src/: CMakeLists.txt  build.ninja  fpga_reg.cpp
DPC++Compiler/FPGATutorials/FPGAExtensions/Other/system_profiling/src/: CMakeLists.txt  double_buffering.cpp
DPC++Compiler/FPGATutorials/FPGAExtensions/Pipes/pipe_array/src/: CMakeLists.txt  build.ninja  pipe_array.cpp  pipe_array.h  pipe_array_internal.h
DPC++Compiler/Poly_Integral/: Makefile  Poly_Integral.sln  Poly_Integral.vcxproj  Poly_Integral.vcxproj.filters  README.md  sample.json
DPC++Compiler/Projectile_motion/: Makefile  Projectile_motion.sln  Projectile_motion.vcxproj  Projectile_motion.vcxproj.filters  Readme.md  sample.json
DPC++Compiler/RTMStencil/: CMakeLists.txt  RTMStencil.sln  RTMStencil.vcxproj  RTMStencil.vcxproj.filters  readme.md  sample.json  y_points_parallel.txt
DPC++Compiler/RTMStencil/src/: CMakeLists.txt  init.cpp  main.cpp  rtm_stencil.h  y_points_parallel.txt
DPC++Compiler/bitonic-sort/: CMakeLists.txt  README.md  bitonic-sort.vcxproj  bitonic-sort.vcxproj.filters  sample.json
DPC++Compiler/bootstrapping/: Makefile  README.md  bootstrapping.sln  bootstrapping.vcxproj  bootstrapping.vcxproj.filters  sample.json
DPC++Compiler/complex_mult/: Makefile  README.md  complex_mult.vcxproj  sample.json
DPC++Compiler/gamma-correction/: CMakeLists.txt  sample.json
DPC++Compiler/sepia-filter/: CMakeLists.txt  README.md  sample.json
DPC++Compiler/simple-add/: Makefile  Makefile.win  Makefile.win.fpga  README.md  simple-add-buffers.vcxproj  simple-add-usm.vcxproj  simple-add.sln
DPC++Compiler/simple-vector-inc/: Makefile  sample.json  simple-vector-add.vcxproj  simple-vector-add.vcxproj.filters  simple-vector-inc.sln  simple-vector-inc.vcxproj  simple-vector-inc.vcxproj.filters
DPC++Compiler/vector-add/: Makefile  Makefile.fpga  Makefile.win  Makefile.win.fpga  README.md  sample.json  vector-add.sln  vector-add.vcxproj  vector-add.vcxproj.filters
Debugger/: README.md
Debugger/array-transform/: CMakeLists.txt  README.md  array-transform.vcxproj  sample.json
Debugger/array-transform/src/: array-transform.cpp  selector.hpp
FPGAExampleDesigns/: README.md
FPGAExampleDesigns/crr/: CMakeLists.txt  README.md  crr.vcxproj  crr.vcxproj.filters  sample.json
FPGAExampleDesigns/gzip/: README.md  gzip.vcxproj  gzip.vcxproj.filters  sample.json
FPGAExampleDesigns/gzip/src/: CMakeLists.txt  CompareGzip.cpp  CompareGzip.h  CompareGzip.hpp  WriteGzip.cpp  WriteGzip.h  WriteGzip.hpp  build.ninja  crc32.cpp  crc32.h  crc32.hpp  gzip.cpp  gzipkernel.cpp  gzipkernel.h  gzipkernel.hpp  kernels.h  kernels.hpp
FPGAExampleDesigns/qrd/: README.md  qrd.vcxproj  qrd.vcxproj.filters  sample.json
FPGAExampleDesigns/qrd/src/: CMakeLists.txt  build.ninja  qrd.cpp  qrd.h  qrd.hpp  qrd_demo.cpp
FPGATutorials/: README.md
FPGATutorials/BestPractices/triangular_loop/: CMakeLists.txt  README.md  sample.json  triangular_loop.vcxproj  triangular_loop.vcxproj.filters
FPGATutorials/BestPractices/triangular_loop/src/: CMakeLists.txt  build.ninja  triangular_loop.cpp
FPGATutorials/Compilation/use_library/src/: CMakeLists.txt  lib.h  lib.hpp  lib_hls.cpp  lib_ocl.cl  lib_rtl_model.cpp  lib_sycl.cpp  use_library.cpp
FPGATutorials/FPGAExtensions/MemoryAttributes/mem_config/src/: CMakeLists.txt  build.ninja  memory_attributes.cpp
Project-Templates/: README.md
Project-Templates/Hello_World_GPU/: sample.json
Project-Templates/cmake-fpga/: sample.json
Project-Templates/cmake-gpu/: sample.json
Project-Templates/makefile-fpga/: sample.json
Project-Templates/makefile-gpu/: sample.json
ThreadingBuildingBlocks/tbb-async-sycl/: sample.json  tbb-async-sycl.vcxproj
ThreadingBuildingBlocks/tbb-async-sycl/src/: CMakeLists.txt  tbb-async-sycl.cpp
Training/: README.md  Welcome.ipynb
VideoProcessingLibrary/: README.md
VideoProcessingLibrary/03_decode_vpp/: CMakeLists.txt  README.md  decode_vpp.sln  decode_vpp.vcxproj  sample.json
VideoProcessingLibrary/03_decode_vpp/src/: decode_vpp.cpp
VideoProcessingLibrary/06_decode_sycl_invert/: CMakeLists.txt  README.md  sample.json
VideoProcessingLibrary/06_decode_sycl_invert/src/: decode_sycl_invert.cpp
VideoProcessingLibrary/08_py_decode_vpp/: CMakeLists.txt  README.md  py_decode_vpp.pyproj  py_decode_vpp.sln  sample.json
VideoProcessingLibrary/08_py_decode_vpp/src/: decode_vpp.py
VideoProcessingLibrary/09_py_simple_encode/: CMakeLists.txt  PreLoad.cmake  README.md  py_encode.pyproj  py_encode.sln  sample.json
VideoProcessingLibrary/09_py_simple_encode/src/: encode_simple.py
oneCCL/: README.md
oneCCL/oneCCL_Getting_Started/: CMakeLists.txt  README.md  oneCCL_Getting_Started.ipynb  sample.json
oneCCL/oneCCL_Getting_Started/include/: sycl_base.hpp
oneCCL/oneCCL_Getting_Started/src/: CMakeLists.txt  cpu_allreduce_bfp16.c  cpu_allreduce_cpp_test.cpp  cpu_allreduce_test.c  sycl_allgatherv_cpp_test.cpp  sycl_allgatherv_test.cpp  sycl_allreduce_cpp_test.cpp  sycl_allreduce_test.cpp  sycl_alltoall_cpp_test.cpp  sycl_alltoall_test.cpp  sycl_bcast_cpp_test.cpp  sycl_bcast_test.cpp  sycl_reduce_cpp_test.cpp  sycl_reduce_test.cpp
oneDNN/: README.md
(+384 files in other folders)
